Fixed Menu z-index, added Main section

--- a/css/menu.css
+++ b/css/menu.css
@@ -14,7 +14,8 @@
     right: 0;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    z-index: 2;
+    z-index: 5;
+    user-select: none;
 }
 
 .menu__item {
