--- a/css/topimage.css
+++ b/css/topimage.css
@@ -3,6 +3,7 @@
     min-width: 1024px;
     height: 400px;
     background-color: #2b3595;
+    margin: 110px auto 30px auto;
     margin: auto;
     margin-top: 110px;
     position: relative;
